1st Step Flexbox Header Layout

--- a/assets/css/1-base/_body-element.sass
+++ b/assets/css/1-base/_body-element.sass
@@ -1,8 +1,9 @@
 body
-  background-color: white
+  background-color: #E0D8E0
   font-size: 14px
   line-height: 1.6
-  font-family: 'Fira Sans', sans-serif
+  // font-family: 'Fira Sans', sans-serif
+  font-family: 'Sansita', sans-serif;
   color: #666
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
