--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
  */
 /* Document
    ========================================================================== */
+@import url("https://fonts.googleapis.com/css?family=Sansita");
 html {
   font-family: sans-serif;
   /* 1 */
@@ -402,11 +403,14 @@ template {
 [hidden] {
   display: none; }
 
+html {
+  font-family: 'Sansita', sans-serif; }
+
 body {
-  background-color: white;
+  background-color: #E0D8E0;
   font-size: 14px;
   line-height: 1.6;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Sansita', sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
@@ -524,3 +528,43 @@ hr {
   clear: both;
   margin: 10px 0 30px;
   height: 0; }
+
+.home-wrap header {
+  width: 135px;
+  background: white;
+  padding: 30px 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: justify;
+      justify-content: space-between; }
+  .home-wrap header .logo {
+    overflow: hidden;
+    text-indent: 101%;
+    white-space: nowrap;
+    background-image: url(http://drive.google.com/uc?export=view&id=0B0jGJ97eJi9nVk9uRzA5cS1RaUE);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    height: 100px;
+    padding: 0;
+    margin: 0; }
+  .home-wrap header .site-nav ul {
+    list-style: none;
+    margin: 20px 0;
+    padding: 0 20px 0 0;
+    text-align: right; }
+    .home-wrap header .site-nav ul li {
+      margin-bottom: 10px; }
+      .home-wrap header .site-nav ul li:last-child {
+        margin-bottom: 0; }
+  .home-wrap header .email-link {
+    display: block;
+    text-align: right;
+    padding-right: 20px; }
+
+.home-wrap {
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh; }
