Finished WLC Flexbox Header

--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -1,15 +1,16 @@
-header 
-	h1.logo World Lethwei Championship
+header
+	.header-position
+		h1.logo World Lethwei Championship
 
-	nav.site-nav
-		ul
-			li: a(href="#home") Home
-			li: a(href="#events") Events
-			li: a(href="#headlines") Headlines
-			li: a(href="#fighters") Fighters
-			li: a(href="#about") About
-			li: a(href="#media") Media
-			li: a(href="#fantasy") Play Fantasy
-			li: a(href="#ticket") Get Your Tickets
+		nav.site-nav
+			ul
+				li: a(href="#home") Home
+				li: a(href="#events") Events
+				li: a(href="#headlines") Headlines
+				li: a(href="#fighters") Fighters
+				li: a(href="#about") About
+				li: a(href="#media") Media
+				li: a(href="#fantasy") Play Fantasy
+				li: a(href="#ticket") Get Your Tickets
 
-	a(href="mailto:devarkarmg2015@gmail.com").email-link +Email WLC
+		a(href="mailto:devarkarmg2015@gmail.com").email-link +Email WLC
