--- a/assets/css/1-base/_body-element.sass
+++ b/assets/css/1-base/_body-element.sass
@@ -1,5 +1,6 @@
 body
   background-color: #E0D8E0
+  // background-color: lightblue
   font-size: 14px
   line-height: 1.6
   // font-family: 'Fira Sans', sans-serif
