--- a/assets/css/2-modules/_header.sass
+++ b/assets/css/2-modules/_header.sass
@@ -2,9 +2,16 @@
 	width: 135px
 	background: white
 	padding: 30px 0
-	display: flex
-	flex-direction: column
-	justify-content: space-between
+
+	.header-position
+		position: fixed
+		top: 30px
+		left: 0
+		bottom: 30px
+		width: 135px
+		display: flex
+		flex-direction: column
+		justify-content: space-between
 
 	.logo
 		+hide-text
