--- a/assets/css/2-modules/_header.sass
+++ b/assets/css/2-modules/_header.sass
@@ -1,47 +1,148 @@
-.home-wrap header
-	width: 135px
-	background: white
-	padding: 30px 0
-
-	.header-position
-		position: fixed
-		top: 30px
-		left: 0
-		bottom: 30px
+.home-wrap 
+	header
 		width: 135px
-		display: flex
-		flex-direction: column
-		justify-content: space-between
+		background: white
+		padding: 30px 0
 
-	.logo
-		+hide-text
-		background:
-			image: url(http://drive.google.com/uc?export=view&id=0B0jGJ97eJi9nVk9uRzA5cS1RaUE)
-			repeat: no-repeat
-			position: center
-			size: contain
-			// color: pink
-		height: 100px
-		padding: 0 
-		margin: 0
+		.header-position
+			position: fixed
+			top: 30px
+			left: 0
+			bottom: 30px
+			width: 135px
+			display: flex
+			flex-direction: column
+			justify-content: space-between
 
-	.site-nav
-		ul 
-			list-style: none
-			// border: 1px solid red
-			margin: 20px 0
-			padding: 0 20px 0 0
+		.logo
+			+hide-text
+			max-width: 135px
+			background:
+				image: url(http://drive.google.com/uc?export=view&id=0B0jGJ97eJi9nVk9uRzA5cS1RaUE)
+				repeat: no-repeat
+				position: center
+				size: contain
+				// color: pink
+			height: 100px
+			padding: 0 
+			margin: 0
+
+		.site-nav
+			ul 
+				list-style: none
+				// border: 1px solid red
+				margin: 20px 0
+				padding: 0 20px 0 0
+				text-align: right
+
+				li
+					margin-bottom: 10px
+
+					&:last-child
+						margin-bottom: 0
+
+		.email-link
+			display: block
 			text-align: right
-
-			li
-				margin-bottom: 10px
-
-				&:last-child
-					margin-bottom: 0
-
-	.email-link
-		display: block
-		text-align: right
-		padding-right: 20px
+			padding-right: 20px
 
 
+		.mobile-nav-toggle
+			width: 40px
+			height: 40px
+			
+			// background: pink
+			margin-right: 20px
+			display: none		
+			align-items: center
+			cursor: pointer
+
+			span,
+			span:before,
+			span:after					
+				content: ""
+				display: block
+				height: 2px
+				width: 100%
+				background: #333			
+				position: relative			
+
+				// css3 humberger btn effect
+				transition: all 0.3s ease-in-out
+
+
+			span:before
+				top: 15px
+
+			span:after
+				top: -17px
+
+
+			&.is-open span
+				background: transparent
+
+			&.is-open span:before,
+			&.is-open span:after
+				transform-origin: center
+				transform: rotate(45deg)
+				top: 0			
+
+
+			&.is-open span:before
+				transform: rotate(-45deg)
+
+
+	// This is Mobile Navigation
+	.mobile-nav
+		display: none
+		position: absolute
+		width: 100%
+		background: white
+		padding: 30px 0 20px
+		transform: translateY(-100%)
+		transition: all 0.3s ease-in-out
+
+		
+		ul
+			list-style: none
+			margin: 0
+			padding: 0
+
+		li
+			text-align: center
+			margin-bottom: 10px
+
+
+
+
+// This is for mobile responsive 
+@media (max-width: 775px)
+	.home-wrap 
+		header
+			width: auto
+			padding: 20px 0
+
+
+			.header-position
+				width: auto
+				position: relative
+				top: auto
+				bottom: auto
+				left: auto
+				flex-direction: row
+				align-items: center
+
+
+			.site-nav,
+			.email-link
+				display: none
+
+			.logo
+				height: 60px
+
+			.mobile-nav-toggle
+				display: flex
+
+		.mobile-nav.is-open
+			display: block
+			transform: translateY(0%)
